Addressed issue similar to VOL-104 in which text slightly overlapped the chevron icons on the Day screens.

--- a/veganKickstart/app/styles/shapes.scss
+++ b/veganKickstart/app/styles/shapes.scss
@@ -82,4 +82,5 @@
   background-image: url(images/right_arrow.png);
   background-repeat: no-repeat;
   background-position: right center;
+  padding-right: 32px;
 }
